[workspace]
resolver = "2"
members = [
  "minami",
  "rin",
  "ena",
  "nadeshiko",
  "chiaki",
  "aoi",
  "akari",
  "chikuwa",
]

[workspace.package]
version = "1.0.0"
rust-version = "1.71.0"
edition = "2021"
license = "0BSD"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = 3
incremental = false
overflow-checks = true
debug = false
debug-assertions = false
rpath = false
strip = true
