[package]
name = "chiaki"
description = "Database operations"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nadeshiko = { path = "../nadeshiko", optional = true }

sqlite = "0.30.4"
paste = "1.0.12"

[dev-dependencies]
tempfile = "3.5.0"
