[package]
name = "chiaki"
description = "Database operations"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chikuwa = { path = "../chikuwa" }
nadeshiko = { path = "../nadeshiko", optional = true }

sqlite = "0.31.0"
paste = "1.0.14"
