[package]
name = "minami"
description = "Manage files and watchlists"
build = "rsc/build.rs"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rin = { path = "../rin" }
ena = { path = "../ena" }
chikuwa = { path = "../chikuwa" }
