[package]
name = "minami"
description = "Files and lists manager"
build = "rsc/build.rs"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rin = { path = "../rin" }
ena = { path = "../ena" }
chiaki = { path = "../chiaki" }
chikuwa = { path = "../chikuwa" }
