[package]
name = "minami"
description = "Manage files and watchlists"
build = "rsc/build.rs"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rin = { path = "../rin" }
ena = { path = "../ena" }
nadeshiko = { path = "../nadeshiko" }
chiaki = { path = "../chiaki" }
aoi = { path = "../aoi" }
akari = { path = "../akari" }
chikuwa = { path = "../chikuwa" }

gtk = { version = "0.18.1", features = ["v3_24_30"] }
