[package]
name = "nadeshiko"
description = "Torrent files downloader"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rin = { path = "../rin" }
chikuwa = { path = "../chikuwa" }
chiaki = { path = "../chiaki" }
akari = { path = "../akari" }
